@@ -125,7 +125,7 @@ class S3Ops {
                 final String prefix = e.getKey().toString();
                 final long timestamp = Long.parseLong(e.getValue().toString());
                 S3BlobStore.log.info(
-                        String.format("Restarting pending bulk delete on '%s/%s':%d", bucketName, prefix, timestamp));
+                        "Restarting pending bulk delete on '%s/%s':%d".formatted(bucketName, prefix, timestamp));
                 pendingDeletesKeyTime.put(prefix, timestamp);
                 boolean nothingToDelete = !asyncDelete(prefix, timestamp);
                 if (nothingToDelete) {
@@ -162,11 +162,10 @@ class S3Ops {
             if (timestamp >= storedTimestamp) {
                 putProperties(pendingDeletesKey, deletes);
                 S3BlobStore.log.info(
-                        String.format("Bulk delete removed pendingDelete for for bucket '%s/%s'", bucketName, prefix));
+                        "Bulk delete removed pendingDelete for for bucket '%s/%s'".formatted(bucketName, prefix));
 
             } else {
-                S3BlobStore.log.info(String.format(
-                        "Bulk delete finished but there's a newer one ongoing for bucket '%s/%s'", bucketName, prefix));
+                S3BlobStore.log.info("Bulk delete finished but there's a newer one ongoing for bucket '%s/%s'".formatted(bucketName, prefix));
             }
         } catch (StorageException e) {
             throw new RuntimeException(e);
@@ -177,8 +176,7 @@ class S3Ops {
 
     public boolean scheduleAsyncDelete(final String prefix) throws GeoWebCacheException {
         final long timestamp = currentTimeSeconds();
-        String msg = String.format(
-                "Issuing bulk delete on '%s/%s' for objects older than %d", bucketName, prefix, timestamp);
+        String msg = "Issuing bulk delete on '%s/%s' for objects older than %d".formatted(bucketName, prefix, timestamp);
         S3BlobStore.log.info(msg);
 
         Lock lock = locks.getLock(prefix);
@@ -398,11 +396,10 @@ class S3Ops {
         @Override
         public Long call() throws Exception {
             LockProvider.Lock lock = locks.getLock(prefix);
-            logger.info(String.format("Running bulk delete on '%s/%s':%d", bucketName, prefix, timestamp));
+            logger.info("Running bulk delete on '%s/%s':%d".formatted(bucketName, prefix, timestamp));
             try {
                 long tilesDeleted = deleteBatchesOfTilesAndInformListeners();
-                logger.info(String.format(
-                        "Finished bulk delete on '%s/%s':%d. %d objects deleted",
+                logger.info("Finished bulk delete on '%s/%s':%d. %d objects deleted".formatted(
                         bucketName, prefix, timestamp, tilesDeleted));
 
                 // Once clear of the streams, throw the interrupt exception if required
@@ -473,8 +470,7 @@ class S3Ops {
 
         private void checkInterrupted() throws InterruptedException {
             if (Thread.interrupted()) {
-                S3BlobStore.log.info(String.format(
-                        "S3 bulk delete aborted for '%s/%s'. Will resume on next startup.", bucketName, prefix));
+                S3BlobStore.log.info("S3 bulk delete aborted for '%s/%s'. Will resume on next startup.".formatted(bucketName, prefix));
                 throw new InterruptedException();
             }
         }
